--- a/source/_posts/2019-07-07-using-es6.md
+++ b/source/_posts/2019-07-07-using-es6.md
@@ -4,7 +4,7 @@ toc: true
 date: 2019-07-07 16:50:00
 description: 本文是完成freecodecamp练习时顺手写的，非常基础
 tags:
-- Javascript
+- JavaScript
 ---
 ## 1 ES6是什么？
 
