--- a/source/_posts/2020-07-19-casbin.md
+++ b/source/_posts/2020-07-19-casbin.md
@@ -141,7 +141,7 @@ permit alice to read data1
 ['data2']
 ```
 
-
+model和policy的定义详细说明[在这里](https://casbin.org/docs/zh-CN/syntax-for-models)。
 
 ## Reference
 
