--- a/source/_posts/2021-01-20-alembic.md
+++ b/source/_posts/2021-01-20-alembic.md
@@ -87,6 +87,78 @@ INFO  [alembic.runtime.migration] Will assume transactional DDL.
 INFO  [alembic.runtime.migration] Running upgrade  -> 95cd2fc4eacd, first revision
 ```
 
+## 自动生成
+
+一般地，我们会根据Model自动生成迁移脚本。
+
+1. 修改env.py, 导入当前路径到path中
+
+   ```python
+   import os
+   import sys
+   sys.path.append(os.path.dirname(os.path.abspath(__file__)) +"/../")
+   ```
+
+2. 编写Model
+
+   **base_class.py**
+
+   ```python
+   from typing import Any
+   from sqlalchemy.ext.declarative import as_declarative, declared_attr
+   
+   @as_declarative()
+   class Base:
+       id: Any
+       __name__: str
+       # Generate __tablename__ automatically
+       @declared_attr
+       def __tablename__(cls) -> str:
+           return cls.__name__.lower()
+   ```
+
+   **user.py**
+
+   ```python
+   from typing import TYPE_CHECKING
+   from sqlalchemy import Boolean, Column, Integer, String
+   from sqlalchemy.orm import relationship
+   from db.base_class import Base
+   
+   if TYPE_CHECKING:
+       from .item import Item
+   
+   class User(Base):
+       id = Column(Integer, primary_key=True, index=True)
+       full_name = Column(String, index=True)
+       email = Column(String, unique=True, index=True, nullable=False)
+       hashed_password = Column(String, nullable=False)
+       is_active = Column(Boolean(), default=True)
+       is_superuser = Column(Boolean(), default=False)
+       items = relationship("Item", back_populates="owner")
+   ```
+
+3. 修改env.py，设置target_metadata
+
+   ```python
+   from db import Base
+   target_metadata = Base.metadata
+   ```
+
+4. 执行命令，生成脚本
+
+   ```bash
+   $ alembic revision --autogenerate -m "first revision"
+   ```
+
+5. 迁移
+
+   ```bash
+   $ alembic upgrade head
+   ```
+
+   详细代码在[这里](https://github.com/l2m2/l2-learn-python/tree/main/alembic)
+
 ## Reference
 
 - https://alembic.sqlalchemy.org/
