--- a/source/_posts/2021-02-01-vue-i18n.md
+++ b/source/_posts/2021-02-01-vue-i18n.md
@@ -121,13 +121,7 @@ this.$i18n.locale = "zhcn"
     <v-menu left offset-y transition="slide-x-transition">
       <v-list dense min-width="48" nav width="140">
         <template v-for="(item, index) in actions">
-          <v-divider v-if="item.divider" :key="index" />
           <v-list-item :key="item.name" link>
-            <v-list-item-icon>
-              <v-icon size="16" small>
-                {{ item.icon }}
-              </v-icon>
-            </v-list-item-icon>
             <v-list-item-content>
               <v-list-item-title>{{ item.title }}</v-list-item-title>
             </v-list-item-content>
@@ -159,33 +153,39 @@ this.$i18n.locale = "zhcn"
   };
   </script>
   ```
-
-  解决方法：
-
-  添加到计算属性中
-
-  ```js
-  computed: {
-      actions: function() {
-        return [
-          { icon: "mdi-help", name: "help", title: this.$t("common.help") },
-          {
-            icon: "mdi-account-box-outline",
-            name: "settings",
-            title: this.$t("common.settings")
-          },
-          {
-            divider: true,
-            icon: "mdi-logout",
-            name: "sign_out",
-            title: this.$t("auth.logout")
-          }
-        ];
-      }
-    }
-  ```
-
   
+  解决方法：
+  
+  1. 添加到计算属性中
+  
+    ```js
+  computed: {
+        actions: function() {
+        return [
+            { icon: "mdi-help", name: "help", title: this.$t("common.help") },
+          {
+              icon: "mdi-account-box-outline",
+              name: "settings",
+              title: this.$t("common.settings")
+            },
+            {
+              divider: true,
+              icon: "mdi-logout",
+              name: "sign_out",
+              title: this.$t("auth.logout")
+            }
+          ];
+        }
+      }
+    ```
+  
+  2. 或者在模板中使用$t
+  
+    ```vue
+    <v-list-item-content>
+      <v-list-item-title>{{ $t(item.title) }}</v-list-item-title>
+  </v-list-item-content> 
+    ```
 
 ## Reference
 
