--- a/source/_posts/2021-02-01-vue-i18n.md
+++ b/source/_posts/2021-02-01-vue-i18n.md
@@ -1,6 +1,6 @@
 ---
 title: 给Vue项目添加i18n支持
-toc: false
+toc: true
 date: 2021-02-01 14:20:00
 description: ...
 tags:
@@ -108,6 +108,35 @@ this.$t("common.help")
 
 ```js
 this.$i18n.locale = "zhcn"
+```
+
+## 集成Vuetify的翻译
+
+`locales/en.json`
+
+```json
+"$vuetify": {
+  "badge": "Badge",
+  "close": "Close"
+}
+```
+
+Vuetify中的全部翻译项在node_modules/vuetify/es5/locale下可以找到。
+
+然后再按如下修改vuetify插件。
+
+`plugins/vuetify.js`
+
+```js
+import Vue from "vue";
+import Vuetify from "vuetify/lib/framework";
+import i18n from "./i18n";
+Vue.use(Vuetify);
+export default new Vuetify({
+  lang: {
+    t: (key, ...params) => i18n.t(key, params)
+  }
+});
 ```
 
 ## 常见问题
