--- a/source/_posts/2021-02-01-vue-i18n.md
+++ b/source/_posts/2021-02-01-vue-i18n.md
@@ -71,6 +71,11 @@ export default new Vue({
 
 ```json
 {
+  "_": {
+    "validate": {
+      "required": "The field is required."
+    }
+  },
   "auth": {
     "username": "Username",
     "password": "Password",
@@ -87,6 +92,11 @@ export default new Vue({
     "username": "用户名",
     "password": "密码",
     "login": "登录"
+  },
+  "_": {
+    "validate": {
+      "required": "必填项"
+    }
   }
 }
 ```
