--- a/source/_posts/2021-01-20-alembic.md
+++ b/source/_posts/2021-01-20-alembic.md
@@ -104,31 +104,25 @@ INFO  [alembic.runtime.migration] Running upgrade  -> 95cd2fc4eacd, first revisi
    **base_class.py**
 
    ```python
-   from typing import Any
-   from sqlalchemy.ext.declarative import as_declarative, declared_attr
+   from sqlalchemy.ext.declarative import declarative_base
    
-   @as_declarative()
-   class Base:
-       id: Any
-       __name__: str
-       # Generate __tablename__ automatically
-       @declared_attr
-       def __tablename__(cls) -> str:
-           return cls.__name__.lower()
+   Base = declarative_base()
    ```
-
+   
    **user.py**
-
+   
    ```python
    from typing import TYPE_CHECKING
    from sqlalchemy import Boolean, Column, Integer, String
    from sqlalchemy.orm import relationship
    from db.base_class import Base
-   
+
    if TYPE_CHECKING:
-       from .item import Item
+    from .item import Item
    
    class User(Base):
+       __tablename__ = "sys_user"
+       
        id = Column(Integer, primary_key=True, index=True)
        full_name = Column(String, index=True)
        email = Column(String, unique=True, index=True, nullable=False)
@@ -137,7 +131,7 @@ INFO  [alembic.runtime.migration] Running upgrade  -> 95cd2fc4eacd, first revisi
        is_superuser = Column(Boolean(), default=False)
        items = relationship("Item", back_populates="owner")
    ```
-
+   
 3. 修改env.py，设置target_metadata
 
    ```python
