--- a/source/_posts/2021-06-03-vs2019-install-mfc.md
+++ b/source/_posts/2021-06-03-vs2019-install-mfc.md
@@ -4,7 +4,7 @@ toc: false
 date: 2021-06-03 18:00:00
 description: VS2019默认不会安装MFC相关的组件
 tags:
-- VS2019
+- MFC
 ---
 
 默认安装VS2019后，运行MFC相关的工程，提示找不到MFC组件。
