--- a/source/_posts/2021-06-17-using-aapt2.md
+++ b/source/_posts/2021-06-17-using-aapt2.md
@@ -24,7 +24,7 @@ $ java -cp sdklib.jar com.android.sdklib.build.ApkBuilderMain temp\zip\xxx.apk -
 
 AAPT2（Android 资源打包工具）是一种构建工具，Android Studio 和 Android Gradle 插件使用它来编译和打包应用的[资源](https://developer.android.google.cn/guide/topics/resources/providing-resources?hl=zh-cn)。AAPT2 会解析资源、为资源编制索引，并将资源编译为针对 Android 平台进行过优化的二进制格式。
 
-使用AAPT2则简单很多，大概长这样：
+使用AAPT2则简单很多，且不依赖JRE。大概长这样：
 
 ```shell
 $ aapt2 compile --dir res\ -o build\res.zip
