--- a/source/_posts/2021-06-17-using-aapt2.md
+++ b/source/_posts/2021-06-17-using-aapt2.md
@@ -1,5 +1,5 @@
 ---
-title: 使用aapt2生成Android动态换肤需要的APK包
+title: 使用AAPT2生成Android动态换肤需要的APK包
 toc: false
 date: 2021-06-17 16:05:00
 description: ...
@@ -7,7 +7,7 @@ tags:
 - Android
 ---
 
-项目中的换肤工具需要生成纯资源的APK包，以动态换肤用。
+项目中的换肤工具需要生成纯资源的APK包，给动态换肤用。
 
 之前是先用AAPT生成R.java, 再生成R.class, 再生成dex，再生成apk。很复杂，还依赖JRE。大概长这样：
 
